--- a/foo-bar-ns.yaml
+++ b/foo-bar-ns.yaml
@@ -3,5 +3,7 @@ kind: Namespace
 metadata:
   creationTimestamp: null
   name: foo-bar
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"
 spec: {}
 status: {}
